# sistemarag

./: .env.example  .gitignore  MANUAL_COMPLETO.md  README.md  README_SISTEMA.md  busca.py  buscador.py  debug_session_creation.py  debug_zep_flow.py  ingestao.py  ingestion.py  main.py  package-lock.json  package.json  pyproject.toml  rag_evaluation_detailed.txt  rag_evaluation_report.json  rag_evaluator.py  requirements.txt  run_agents_api.py  run_pipeline.py  run_system_api.py  search.py  sistemarag.md  test_123_session.py  test_conversation_123.py  test_final_fix.py  test_fixed_session.py  test_rag.py  test_rag2.py  test_session_creation.py  test_single_run.py  test_zep_flow.py  test_zep_integration.py  test_zep_sdk.py  teste.py
agents/api/: auth.py  main.py
agents/core/: rag_search_agent.py  zep_client.py
agents/tools/: retrieval_tool.py
documentation/: 01_VISAO_GERAL_COMPLETA.md  02_MANUAL_INSTALACAO_USO.md  03_SISTEMA_AGENTES.md  04_API_SISTEMA_RAG.md  05_API_AGENTES.md  06_GUIA_TESTES.md  README.md
sistema_rag/: __init__.py  run_pipeline.py
sistema_rag/components/: __init__.py
sistema_rag/config/: settings.py
sistema_rag/examples/: __init__.py  basic_usage.py  conversational_rag.py
sistema_rag/ingestion/: basic_usage.py  run_pipeline.py
sistema_rag/search/: conversational_rag.py
sistema_rag/utils/: helpers.py
src/: App.tsx  index.css
src/components/: Dashboard.tsx  LoginForm.tsx
src/lib/: supabase.ts
system_rag/api/: api.py
system_rag/config/: settings.py
tests/: run_tests.py
tests/agents/: test_agent_auth.py  test_agent_core.py  (+1 more)
(+12 files in other folders)
