[project]
name = "sistemarag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "httpx>=0.28.1",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
